tests/test/tests/ui/fail-syntax/missing_source.stderr
error: cite attribute requires a source expression
 --> tests/ui/fail-syntax/missing_source.rs:5:1
  |
5 | #[cite()]  // This should fail - no source provided
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cite` (in Nightly builds, run with -Z macro-backtrace for more info)
